Updating documentation and error messages
